Remove old images, add Resume, adjust some writing

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -85,11 +85,11 @@ import { SITE } from "@consts";
         </button>
       </div>
       <nav class="flex items-center gap-1 text-sm">
-        <Link href="/blog">blog</Link>
+        <Link href="/projects">Projects</Link>
         <span>
           {`/`}
         </span>
-        <Link href="/projects">projects</Link>
+        <Link href="/blog">Blog</Link>
         <span>
           {`/`}
         </span>
