--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,14 +30,81 @@ const projects: CollectionEntry<"projects">[] = (
             <span class="animate">
               <p>
                 I am a software engineer from Latvia. I love to build delightful
-                Web projects for users. Other than that, I dabble in subjects
-                such as machine learning, data science, image and audio
-                analysis, computer graphics, cybersecurity and human-centered
-                design. My dream is to help build a more awesome world for
-                tomorrow.
+                Web projects. Other than that, I dabble in subjects such as
+                machine learning, data science, image and audio analysis,
+                computer graphics, cybersecurity and human-centered design. My
+                dream is to help build a more awesome world for tomorrow.
               </p>
             </span>
           </article>
+        </section>
+
+        <section class="animate space-y-6">
+          <div class="flex flex-wrap items-center justify-between gap-y-2">
+            <h2 class="font-semibold text-black dark:text-white">Resume</h2>
+          </div>
+          <div class="flex flex-wrap items-center justify-between gap-y-4">
+            <p>
+              For a more detailed overview about my work experience, education,
+              and skills, please check out my resume:
+            </p>
+            <a
+              href="/ReinisSestakovskisResume.pdf"
+              target="_blank"
+              aria-label="Resume"
+              class="not-prose group relative flex w-full flex-nowrap justify-between rounded-lg border border-black/15 px-4 py-3 pr-10 transition-colors duration-300 ease-in-out hover:bg-black/5 hover:text-black focus-visible:bg-black/5 focus-visible:text-black dark:border-white/20 dark:hover:bg-white/5 dark:hover:text-white dark:focus-visible:bg-white/5 dark:focus-visible:text-white"
+            >
+              <div class="flex flex-1 flex-row items-center space-x-4">
+                <svg
+                  height="32px"
+                  width="32px"
+                  version="1.1"
+                  id="Layer_1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  viewBox="0 0 309.267 309.267"
+                  xml:space="preserve"
+                  fill="#000000"
+                  ><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g
+                    id="SVGRepo_tracerCarrier"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier">
+                    <g>
+                      <path
+                        style="fill:#E2574C;"
+                        d="M38.658,0h164.23l87.049,86.711v203.227c0,10.679-8.659,19.329-19.329,19.329H38.658 c-10.67,0-19.329-8.65-19.329-19.329V19.329C19.329,8.65,27.989,0,38.658,0z"
+                      ></path>
+                      <path
+                        style="fill:#B53629;"
+                        d="M289.658,86.981h-67.372c-10.67,0-19.329-8.659-19.329-19.329V0.193L289.658,86.981z"
+                      ></path>
+                      <path
+                        style="fill:#FFFFFF;"
+                        d="M217.434,146.544c3.238,0,4.823-2.822,4.823-5.557c0-2.832-1.653-5.567-4.823-5.567h-18.44 c-3.605,0-5.615,2.986-5.615,6.282v45.317c0,4.04,2.3,6.282,5.412,6.282c3.093,0,5.403-2.242,5.403-6.282v-12.438h11.153 c3.46,0,5.19-2.832,5.19-5.644c0-2.754-1.73-5.49-5.19-5.49h-11.153v-16.903C204.194,146.544,217.434,146.544,217.434,146.544z M155.107,135.42h-13.492c-3.663,0-6.263,2.513-6.263,6.243v45.395c0,4.629,3.74,6.079,6.417,6.079h14.159 c16.758,0,27.824-11.027,27.824-28.047C183.743,147.095,173.325,135.42,155.107,135.42z M155.755,181.946h-8.225v-35.334h7.413 c11.221,0,16.101,7.529,16.101,17.918C171.044,174.253,166.25,181.946,155.755,181.946z M106.33,135.42H92.964 c-3.779,0-5.886,2.493-5.886,6.282v45.317c0,4.04,2.416,6.282,5.663,6.282s5.663-2.242,5.663-6.282v-13.231h8.379 c10.341,0,18.875-7.326,18.875-19.107C125.659,143.152,117.425,135.42,106.33,135.42z M106.108,163.158h-7.703v-17.097h7.703 c4.755,0,7.78,3.711,7.78,8.553C113.878,159.447,110.863,163.158,106.108,163.158z"
+                      ></path>
+                    </g>
+                  </g></svg
+                ><p class="font-semibold">Resume / CV</p>
+              </div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                class="absolute top-1/2 right-2 size-5 -translate-y-1/2 fill-none stroke-current stroke-2"
+              >
+                <line
+                  x1="5"
+                  y1="12"
+                  x2="19"
+                  y2="12"
+                  class="translate-x-3 scale-x-0 transition-transform duration-300 ease-in-out group-hover:translate-x-0 group-hover:scale-x-100 group-focus-visible:translate-x-0 group-focus-visible:scale-x-100"
+                ></line>
+                <polyline
+                  points="12 5 19 12 12 19"
+                  class="-translate-x-1 transition-transform duration-300 ease-in-out group-hover:translate-x-0 group-focus-visible:translate-x-0"
+                ></polyline>
+              </svg>
+            </a>
+          </div>
         </section>
 
         <section class="animate space-y-6">
@@ -61,9 +128,9 @@ const projects: CollectionEntry<"projects">[] = (
         <section class="animate space-y-6">
           <div class="flex flex-wrap items-center justify-between gap-y-2">
             <h2 class="font-semibold text-black dark:text-white">
-              Latest posts
+              Latest Blog posts
             </h2>
-            <Link href="/blog"> See all posts </Link>
+            <Link href="/blog"> See all Blog posts </Link>
           </div>
           <ul class="not-prose flex flex-col gap-4">
             {
