--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,12 +7,19 @@ import BackToTop from "@components/BackToTop.astro";
 <footer class="animate">
   <Container>
     <div class="relative">
-      <div class="absolute -top-2 right-0">
+      <div class="absolute right-0">
         <BackToTop />
       </div>
     </div>
     <div class="flex items-center justify-between">
       <div>&copy; {new Date().getFullYear()} • {SITE.TITLE}</div>
+    </div>
+    <div class="text-sm">
+      Built using <a
+        href="https://astro-micro.vercel.app/"
+        class="underline"
+        target="_blank">Astro Micro 🔬</a
+      >
     </div>
   </Container>
 </footer>
