--- a/src/components/Giscus.astro
+++ b/src/components/Giscus.astro
@@ -1,13 +1,11 @@
 <div class="giscus"></div>
 
 <script
-  is:inline
-  data-astro-rerun
   src="https://giscus.app/client.js"
-  data-repo="trevortylerlee/astro-micro"
-  data-repo-id="R_kgDOL_6l9Q"
+  data-repo="ReinisS/astro-portfolio"
+  data-repo-id="R_kgDOOCAp3g"
   data-category="Announcements"
-  data-category-id="DIC_kwDOL_6l9c4Cfk55"
+  data-category-id="DIC_kwDOOCAp3s4Cngz9"
   data-mapping="pathname"
   data-strict="0"
   data-reactions-enabled="1"
@@ -17,4 +15,5 @@
   data-lang="en"
   data-loading="lazy"
   crossorigin="anonymous"
-  async></script>
+  async
+></script>
