--- a/src/pages/projects/[...id].astro
+++ b/src/pages/projects/[...id].astro
@@ -34,11 +34,11 @@ const { Content, headings } = await render(project);
           <FormattedDate date={project.data.date} />
         </div>
         &bull;
-        {project.body && (
-          <div class="font-base text-sm">
-            {readingTime(project.body)}
-          </div>
-        )}     
+        {
+          project.body && (
+            <div class="font-base text-sm">{readingTime(project.body)}</div>
+          )
+        }
       </div>
       <h1 class="text-3xl font-semibold text-black dark:text-white">
         {project.data.title}
@@ -48,13 +48,13 @@ const { Content, headings } = await render(project);
           <nav class="flex gap-1">
             {project.data.demoURL && (
               <Link href={project.data.demoURL} external>
-                demo
+                Demo
               </Link>
             )}
             {project.data.demoURL && project.data.repoURL && <span>/</span>}
             {project.data.repoURL && (
               <Link href={project.data.repoURL} external>
-                repo
+                Repo
               </Link>
             )}
           </nav>
