--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,11 +41,11 @@ const projects: CollectionEntry<"projects">[] = (
 <Layout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
     <aside data-pagefind-ignore>
-      <h1 class="font-semibold text-black dark:text-white">Hi!</h1>
+      <h1 class="animate font-semibold text-black dark:text-white">Hi!</h1>
       <div class="space-y-16">
-        <section>
+        <section class="animate">
           <article class="space-y-4">
-            <span class="animate">
+            <span>
               <p>
                 I am a software engineer from Latvia <span class="inline-block"
                   ><Image
