Adjust 'Back to top' button, adjust button hover pointers

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,10 +6,8 @@ import BackToTop from "@components/BackToTop.astro";
 
 <footer class="animate">
   <Container>
-    <div class="relative">
-      <div class="absolute right-0">
-        <BackToTop />
-      </div>
+    <div class="mb-4 flex justify-center">
+      <BackToTop />
     </div>
     <div class="flex items-center justify-between">
       <div>&copy; {new Date().getFullYear()} • {SITE.TITLE}</div>
