--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,11 +9,11 @@ import type { CollectionEntry } from "astro:content";
 import { Image } from "astro:assets";
 
 import cSharpLogo from "@assets/c-sharp.svg";
-import dockerLogo from "@assets/docker-icon.svg";
+import dockerLogo from "@assets/docker.svg";
 import postgresqlLogo from "@assets/postgresql.svg";
 import pythonLogo from "@assets/python.svg";
 import reactLogo from "@assets/react.svg";
-import typescriptLogo from "@assets/typescript-icon.svg";
+import typescriptLogo from "@assets/typescript.svg";
 import latviaFlag from "@assets/flag_of_latvia.svg";
 
 const logos = [
